# Union.Manifold

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  release.yml
electron/: aria2-manager.cjs  download-engine.cjs  main.cjs  preload.cjs  splash.html  storage-reservation.cjs  system-profile.cjs  tray-popup-preload.cjs  tray-popup.html
electron/native/: addon.cpp  binding.gyp  gcpad_bridge.cpp  gcpad_bridge_linux.cpp  gcpad_bridge_posix.cpp  pipe_server.cpp  stubs_nonwin.cpp
electron/sources/: filters.cjs  http.cjs  index.cjs  parse.cjs  schema.cjs  steam.cjs
electron/sources/adapters/: ankergames.cjs  gamebounty.cjs  steamrip.cjs  unioncrax.cjs
electron/sources/hosts/: buzzheavier.cjs  dlproxy.cjs  index.cjs  pixeldrain.cjs
overlay-dll/: CMakeLists.txt
overlay-dll/src/: dllmain.cpp
overlay-dll/src/hooks/: d3d11_hook.cpp  d3d9_hook.cpp  opengl_hook.cpp  wndproc_hook.cpp
overlay-dll/src/ipc/: pipe_client.cpp
overlay-dll/src/memory/: shared_frame.cpp
overlay-dll/src/renderer/: d3d11_renderer.cpp  d3d9_renderer.cpp  gl_renderer.cpp
renderer/: index.html  tsconfig.json  vite.config.ts
renderer/src/: fonts.css  globals.css  main.tsx  manifold.css  vite-env.d.ts
renderer/src/app/: App.tsx  ForkLayout.tsx  Layout.tsx
renderer/src/components/: AchievementsPanel.tsx  AddGameModal.tsx  ArchiveDropZone.tsx  ArchiveInstallModal.tsx  AuthMirrorBlockedCard.tsx  AvatarPickerDialog.tsx  BackButton.tsx  CollectionActionMenu.tsx  CommentMarkdown.tsx  CommentMentionTextarea.tsx  CommentSkeleton.tsx  CommunityPlaytimeChart.tsx  CompactRemapSection.tsx  ControllerDiagram.tsx  ControllerNavigation.tsx  ControllerOverlayFlyout.tsx  ControllerSettingsPanel.tsx  CriticalLoadModal.tsx  DesktopShortcutModal.tsx  DiscordAvatar.tsx  DiskUsageBreakdown.tsx  DownBar.tsx  DownloadCheckModal.tsx  EditGameMetadataModal.tsx  EmptyState.tsx  ErrorMessage.tsx  ExePickerModal.tsx  GameActionMenu.tsx  GameCard.tsx  GameCardCompact.tsx  GameComments.tsx  GameCommunityActivity.tsx  GameExperience.tsx  GameExperiencePrompt.tsx  GameLaunchFailedModal.tsx  GameLaunchPreflightModal.tsx  (+55 more)
scripts/: fetch-7zip.cjs  fetch-aria2.cjs  fetch-gcpad.cjs  fetch-sidecars.mjs  migrate-icons.cjs  rebuild-native.cjs  release-version.cjs  test-sources.cjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: assets.rs  bins.rs  dialogs.rs  error.rs  http.rs  install.rs  lib.rs  library.rs  logging.rs  main.rs  misc.rs  net.rs  paths.rs  settings.rs  shortcuts.rs  state.rs  storage.rs  system.rs  updater.rs  window_cmds.rs
src-tauri/src/downloads/: aria2.rs  mod.rs
src-tauri/src/launch/: linux.rs  mod.rs
src-tauri/src/sources/: cache.rs  filters.rs  mod.rs  parse.rs  schema.rs  steam.rs
src-tauri/src/sources/adapters/: ankergames.rs  gamebounty.rs  mod.rs  steamrip.rs  unioncrax.rs
src-tauri/src/sources/hosts/: buzzheavier.rs  dlproxy.rs  mod.rs  pixeldrain.rs
(+121 files in other folders)
